codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__login_account_limits_popup_deduplicates_same_logical_account.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  View Account Limits
  Choose a saved account to review or refresh its latest usage and reset times.
  This session: API key (...test)
  Shared active account: none
  3 misnamed account file(s) are ignored until renamed in /accounts.

› 1. Account 2 (Pro)             No snapshot yet. Press enter to refresh this account now.
  2. Account 1 (Pro)             No snapshot yet
  3. Refresh due account limits  Refresh 2 saved ChatGPT accounts whose limit snapshots are due now.
  4. Force refresh all accounts  Refresh all 2 saved ChatGPT account limit snapshots now, even if they are not due
                                 yet.

  Press enter to confirm or esc to go back
