codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__login_account_limits_popup_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 8335
expression: popup
---
  View Account Limits
  Choose a saved account to review or refresh its latest usage and reset times.
  This session: limits@example.com (Pro)

› 1. limits@example.com (Pro) (current)     1h  42% until 11:29 on 1 Jan. Press enter to refresh
                                            this account now.
  2. Refresh due account limits (disabled)  No saved ChatGPT account currently needs a refresh.
                                            (disabled: There are no due saved-account snapshots
                                            right now.)
  3. Force refresh all accounts             Refresh the saved ChatGPT account limit snapshot now,
                                            even if it is not due yet.

  Press enter to confirm or esc to go back
